--- a/src/tero/clouds/templates/web-cloud-init-script.j2
+++ b/src/tero/clouds/templates/web-cloud-init-script.j2
@@ -59,12 +59,14 @@ VIRTUALENV_RUN="/usr/bin/python3 -m venv --system-site-packages"
 [ $(/usr/bin/getent passwd $USER) ] || /usr/sbin/useradd --no-create-home --uid 1001 --gid 1001 $USER
 # recreates links for TLS certificates
 for domain in `ls /etc/pki/tls/certs/archive` ; do
+  chmod 600 /etc/pki/tls/certs/archive/$domain/privkey.pem
   mkdir -p /etc/pki/tls/certs/live/$domain
   pushd /etc/pki/tls/certs/live/$domain
   [ -e privkey.pem ] || ln -s ../../archive/$domain/privkey.pem
   [ -e fullchain.pem ] || ln -s ../../archive/$domain/fullchain.pem
 done
 for domain in `ls /etc/letsencrypt/archive` ; do
+  chmod 600 /etc/letsencrypt/archive/$domain/privkey.pem
   mkdir -p /etc/letsencrypt/live/$domain
   pushd /etc/letsencrypt/live/$domain
   [ -e privkey.pem ] || ln -s ../../archive/$domain/privkey1.pem privkey.pem
