--- a/src/tero/clouds/templates/web-cloud-init-script.j2
+++ b/src/tero/clouds/templates/web-cloud-init-script.j2
@@ -9,51 +9,49 @@ set -e
 rootDir=/var/www
 USER=djaoapp
 OWNER=ec2-user
+INSTALL_PACKAGES=/usr/bin/dnf
 
 # Install necessary public packages to bootstrap configuration
-if [ -f /usr/bin/dnf ]; then
-    OWNER=fedora
-    [ -f /usr/bin/aws ] || /usr/bin/dnf -y install awscli
-    [ -f /usr/bin/bzip2 ] || /usr/bin/dnf -y install bzip2
-    [ -f /usr/bin/make ] || /usr/bin/dnf -y install make
-else
-    if [ "$(grep "Amazon" /etc/system-release)" != "" ]; then
-        # We need to insure SELinux is enabled which is not the case
-        # with the default AmazonLinux2 images.
-        if [ "$(sestatus)" =~ .*disabled ] ; then
-            yum install selinux-policy selinux-policy-targeted policycoreutils-python
-            sed -i 's/SELINUX=\(\w\w*\)/SELINUX=enforcing/g' /etc/selinux/config
-            sed -i 's/GRUB_CMDLINE_LINUX_DEFAULT="\(.*\)"/GRUB_CMDLINE_LINUX_DEFAULT="\1 selinux=1 security=selinux"/' /etc/default/grub
-            /usr/sbin/grub2-mkconfig -o /boot/grub2/grub.cfg
-            touch /.autorelabel
-            # XXX we will need to reboot with the `reboot` command.
-        fi
-        # We have to enable the EPEL repo to install podofo.
-        if [ ! -f /etc/yum.repos.d/epel.repo ]; then
-            amazon-linux-extras install epel -y
-        fi
+if [ "$(grep "Amazon Linux release 2" /etc/system-release)" != "" ]; then
+    INSTALL_PACKAGES=/usr/bin/yum
+    # We need to insure SELinux is enabled which is not the case
+    # with the default AmazonLinux2 images.
+    if [ "$(sestatus)" =~ .*disabled ] ; then
+        /usr/bin/yum install selinux-policy selinux-policy-targeted policycoreutils-python
+        sed -i 's/SELINUX=\(\w\w*\)/SELINUX=enforcing/g' /etc/selinux/config
+        sed -i 's/GRUB_CMDLINE_LINUX_DEFAULT="\(.*\)"/GRUB_CMDLINE_LINUX_DEFAULT="\1 selinux=1 security=selinux"/' /etc/default/grub
+        /usr/sbin/grub2-mkconfig -o /boot/grub2/grub.cfg
+        touch /.autorelabel
+        # XXX we will need to reboot with the `reboot` command.
     fi
-    if [ "$(grep "CentOS" /etc/system-release)" != "" ]; then
-        OWNER=centos
-        if [ ! -f /usr/bin/python3 ]; then
-            if [ ! -f /etc/yum.repos.d/epel.repo ]; then
-                /usr/bin/yum -y install epel-release
-            fi
-        fi
-        # Without making the fast cache, python36 is sometimes not found on mirror
-        # (ex: mirrors.cat.pdx.edu)
-        /usr/bin/yum makecache fast
-        /usr/bin/yum -y install python36 python36-libs python36-devel python36-pip python-boto3
+    # We have to enable the EPEL repo to install podofo.
+    if [ ! -f /etc/yum.repos.d/epel.repo ]; then
+        amazon-linux-extras install epel -y
     fi
-    [ -f /usr/bin/aws ] || /usr/bin/yum -y install awscli
-    [ -f /usr/bin/bzip2 ] || /usr/bin/yum -y install bzip2
-    [ -f /usr/bin/make ] || /usr/bin/yum -y install make
-    [ -e /usr/lib64/python2.7/site-packages/selinux ] || /usr/bin/yum -y install libselinux-python
+    [ -e /usr/lib64/python2.7/site-packages/selinux ] || $INSTALL_PACKAGES -y install libselinux-python
 fi
-VIRTUALENV_RUN="/usr/bin/python3 -m venv --system-site-packages"
+if [ "$(grep "CentOS" /etc/system-release)" != "" ]; then
+    OWNER=centos
+    INSTALL_PACKAGES=/usr/bin/yum
+    if [ ! -f /usr/bin/python3 ]; then
+        if [ ! -f /etc/yum.repos.d/epel.repo ]; then
+            /usr/bin/yum -y install epel-release
+        fi
+    fi
+    # Without making the fast cache, python36 is sometimes not found on mirror
+    # (ex: mirrors.cat.pdx.edu)
+    /usr/bin/yum makecache fast
+    /usr/bin/yum -y install python36 python36-libs python36-devel python36-pip python-boto3
+    [ -e /usr/lib64/python2.7/site-packages/selinux ] || $INSTALL_PACKAGES -y install libselinux-python
+fi
+
+[ -f /usr/bin/aws ] || $INSTALL_PACKAGES -y install awscli
+[ -f /usr/bin/bzip2 ] || $INSTALL_PACKAGES -y install bzip2
+[ -f /usr/bin/make ] || $INSTALL_PACKAGES -y install make
 
 # download keys, certificates, etc.
 /usr/bin/aws s3 cp {{identities_url}} / --recursive
+
 # update required ownership
 [ $(/usr/bin/getent group $USER) ] || /usr/sbin/groupadd --gid 1001 $USER
 [ $(/usr/bin/getent passwd $USER) ] || /usr/sbin/useradd --no-create-home --uid 1001 --gid 1001 $USER
@@ -79,6 +77,7 @@ siteTop=${rootDir}/djaoapp
 cd $rootDir
 shopt -s nullglob
 packages=$(echo "*.tar.gz *.tar.bz2")
+VIRTUALENV_RUN="/usr/bin/python3 -m venv --system-site-packages"
 if [ "X$packages" != "X" ] ; then
     for package in ${packages} ; do
         dirname=${package%%.*}
@@ -159,13 +158,13 @@ if [ -d ${siteTop} ] ; then
         pushd ${siteTop}/var/log
         /usr/bin/ln -s /var/log/gunicorn
         popd
-        /usr/bin/mkdir -p ${siteTop}/reps/djaoapp/themes ${siteTop}/reps/djaoapp/htdocs/themes
+        /usr/bin/mkdir -p ${siteTop}/reps/djaoapp/htdocs/themes ${siteTop}/reps/djaoapp/themes ${siteTop}/reps/djaoapp/.cache
 
         # We make sure the .pid file can be created by gunicorn and systemd
         # service can load.
         /usr/bin/chown ${USER}:${USER} ${siteTop}/etc/sysconfig/djaoapp ${siteTop}/var/run /var/log/gunicorn
         # Insures we can upload themes
-        /usr/bin/chown ${USER}:${USER} ${siteTop}/reps/djaoapp/htdocs/themes ${siteTop}/reps/djaoapp/themes
+        /usr/bin/chown ${USER}:${USER} ${siteTop}/reps/djaoapp/htdocs/themes ${siteTop}/reps/djaoapp/themes ${siteTop}/reps/djaoapp/.cache
         # and that nginx can access the static assets
         /usr/sbin/semanage fcontext -a -t 'httpd_sys_rw_content_t' "${siteTop}/reps/djaoapp/htdocs(.*)"
         /usr/sbin/restorecon -rvF ${siteTop}/reps/djaoapp
