--- a/src/tero/clouds/templates/web-cloud-init-script.j2
+++ b/src/tero/clouds/templates/web-cloud-init-script.j2
@@ -1,7 +1,6 @@
 #!/bin/bash
 #
-# Configuration of a webfront instance (based of web base AMI created
-# by the create_web_base Ansible role).
+# Configures a webfront instance.
 
 set -x
 set -e
